--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <body>
+    <title>ls</title>
     <h1>Login</h1>
     <form action="/login" method="POST">
       <input name="username" type="text" /><br />
