--- a/views/updateCustomer.ejs
+++ b/views/updateCustomer.ejs
@@ -1,11 +1,11 @@
 !DOCTYPE html>
 <html>
   <head>
-    <title>loan</title>
+    <title>ls</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1>Cadastro de clientes</h1>
+    <h1>SB</h1>
     <div class="vertical-menu">
         <a href="/loan">Empréstimo</a>
         <a href="/loanConsultation">Consulta empréstimo</a>
@@ -14,7 +14,7 @@
         <a href="/customers" class="active">Clientes</a>
         <a href="/books">Livros</a>
     </div>
-    <div>
+    <div class="registrationsInputs">
       <h4>CPF</h4>
       <input type="number" name="" id="">
       <h4>Email</h4>
