--- a/views/books.ejs
+++ b/views/books.ejs
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>loan</title>
+    <title>ls</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script src="/javascripts/script.js"></script>
+    <script type="text/javascript">
+      window.onload = () => {
+        insertDataInTableBooks(JSON.parse('<%- JSON.stringify(book) %>'))
+      }
+    </script>
+    
   </head>
   <body>
-    <h1>Livros</h1>
+    <h1>SB</h1>
     <div class="vertical-menu">
         <a href="/loan">Empréstimo</a>
         <a href="/loanConsultation">Consulta empréstimo</a>
@@ -14,16 +21,18 @@
         <a href="/customers">Clientes</a>
         <a href="/books" class="active">Livros</a>
     </div>
-    <div>
+    <div class="customersSearch">
       <h4>Livros</h4>
-      <input type="search" name="" id="">
-      <button>Pesquisar</button>
+      <input type="search" id="bookName">
+      <button onclick="searchBook()">Pesquisar</button>
       <br>
-      <input type="checkbox" name="" id="">
+      <input type="checkbox" id="available" onclick="checkAvailable()">
       <label for="">Disponiveis</label>
-      <input type="checkbox" name="" id="">
+      <input type="checkbox" id="unavailable" onclick="checkUnavailable()">
       <label for="">Indisponiveis</label>
-      <table border="1">
+      <br>
+      <br>
+      <table border="1" id="tableBooks"class="table">
         <tr>
           <th>Livro</th>
           <th>Autor</th>
@@ -32,15 +41,6 @@
           <th>Edição</th>
           <th>Editora</th>
           <th>id</th>
-        </tr>
-        <tr>
-          <td>livro1</td>
-          <td>autor1</td>
-          <td>ano1</td>
-          <td>area/genero1</td>
-          <td>edição1</td>
-          <td>editora1</td>
-          <td>id1</td>
         </tr>
       </table>
     </div>
